<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="dialog"
            type="test.fueled.custom_dialog.CustomSignUpDialog" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/Black"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:textColorHint="@color/Silver"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopStart="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/input_text_style"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/Silver"
                app:boxCornerRadiusBottomEnd="@dimen/_4sdp"
                app:boxCornerRadiusBottomStart="@dimen/_4sdp"
                app:boxCornerRadiusTopEnd="@dimen/_4sdp"
                app:boxCornerRadiusTopStart="@dimen/_4sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/input_text_style"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_backgound"
                android:onClick="@{(v)->dialog.dismiss()}"
                android:text="@string/cancel"
                android:textColor="@color/White"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/button_backgound"
                android:onClick="@{(v)->dialog.signUpClicked()}"
                android:text="@string/signup"
                android:textColor="@color/White"
                android:textSize="@dimen/_13sdp" />


        </LinearLayout>
    </LinearLayout>
</layout>